renaming few topics and data

--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div></div>
     <!--      Center Aligned Content      -->
     <div class="p-toolbar-group-center">
-      Platform Tool
+      Kafka Tool
     </div>
     <div></div>
   </p-toolbar>
