inconsistent ui fixes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,11 +3,11 @@
     <app-header ></app-header>
   </div>
   <!--Splitter-->
-  <div class="absolute w-full">
-    <p-splitter [minSizes]="[20,50]" [panelSizes]="[20, 70]" [style]="{ 'height': '88%', margin:'6px 4px 0px 4px'}">
+  <div class="absolute w-full h-full">
+    <p-splitter  [minSizes]="[30,50]" [panelSizes]="[30, 70]" [style]="{ 'height': '88%', margin:'6px 4px 0px 4px'}">
       <!--  Panel 1 - Navigation  -->
       <ng-template pTemplate >
-        <app-nav-bar class="nav-bar-styling pt-2 pr-2" id="navBar" (topicChangeEvent)="triggerDataTableUpdate($event)">
+        <app-nav-bar class="nav-bar-styling p-2" id="navBar" (topicChangeEvent)="triggerDataTableUpdate($event)">
         </app-nav-bar>
       </ng-template>
       <!--  Panel 2 - Content   -->
