--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,7 +3,7 @@
   margin: 4px;
 }
 .nav-bar-styling{
-  width:98%;
-  min-width: 100px;
-  margin-left: 7px;
+  width:100%;
+  min-width: fit-content;
+  
 }
