--- a/src/app/home/nav-bar/nav-bar.component.html
+++ b/src/app/home/nav-bar/nav-bar.component.html
@@ -1,10 +1,24 @@
-  <p-tree  scrollHeight="85dvh" class="nav-bar-styling " [style]="{padding:0}" (onNodeSelect)="gridUpdateEvent($event)" [(selection)]="selectedTopic" [contextMenu]="cm" [value]="menuData"
-          selectionMode="single">
-  </p-tree>
-  <p-contextMenu #cm [model]="contextMenu"></p-contextMenu>
-  <p-toast></p-toast>
-  <p-dialog [(visible)]="_homeService.showTopicForm" [breakpoints]="{ '960px': '75vw' }" [draggable]="false"
-            [resizable]="false" [style]="{ width: '20vw' }" header="New Topic Config">
-    <app-topic-form></app-topic-form>
-  </p-dialog>
-  <p-confirmDialog></p-confirmDialog>
+<p-tree
+  scrollHeight="85dvh"
+  class="nav-bar-styling"
+  [style]="{ 'padding': '0', 'height': '100%' }"
+  (onNodeSelect)="gridUpdateEvent($event)"
+  [(selection)]="selectedTopic"
+  [contextMenu]="cm"
+  [value]="menuData"
+  selectionMode="single"
+>
+</p-tree>
+<p-contextMenu #cm [model]="contextMenu"></p-contextMenu>
+<p-toast></p-toast>
+<p-dialog
+  [(visible)]="_homeService.showTopicForm"
+  [breakpoints]="{ '960px': '75vw' }"
+  [draggable]="false"
+  [resizable]="false"
+  [style]="{ width: '20vw' }"
+  header="New Topic Config"
+>
+  <app-topic-form></app-topic-form>
+</p-dialog>
+<p-confirmDialog></p-confirmDialog>
